--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+main {
+	width: 150px;
+	height: 150px;
+	background-color: #000;
+}
+
+p {
+	color: #fff;
+	margin-left: 32px;
+	padding: 10px;
+}
+
+
